@@ -477,6 +477,7 @@ Other Changes
     all affected tests (Anshum Gupta)
   - SOLR-11059: Randomize PointFields in schema-blockjoinfacetcomponent.xml and all related tests (Anshum Gupta)
   - SOLR-11060: Randomize PointFields in schema-custom-field.xml and all related tests (Anshum Gupta)
+  - SOLR-11095: Randomize PointFields in doc-expiry & exitabe-directory test configsets (hossman)
 
 * SOLR-6807: Changed requestDispatcher's handleSelect to default to false, thus ignoring "qt".
   Simplified configs to not refer to handleSelect or "qt".  Switch all tests that assumed true to assume false
